--- a/modulo1/desafio/d10/style.css
+++ b/modulo1/desafio/d10/style.css
@@ -1,30 +1,48 @@
 @charset "UTF-8";
 
-* {
-    margin: 0px;
-    padding: 0px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @font-face {
-    font-family: idroid;
+    font-family: Android;
     src: url(fonts/idroid.otf);
     font-weight: normal;
     font-style: normal;
 }
 
+:root {
+    /* variaveis em css */
+    --cor0: #ebe5c5;
+    --cor1: #84e1ad;
+    --cor2: #3ddc84;
+    --cor3: #2fa866;
+    --cor4: #1a5c37;
+    --cor5: #063d1e;
+
+
+    --fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
+    --fonte-destaque: "Bebas Neue", "cursive";
+    --fonte-android: "Android", "cursive";
+}
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #84e1ad;
+    font-family: var(--fonte-padrao);
+    background-color: var(--cor1);
 }
 
 header {
     margin-top: 0px;
     padding-top: 50px;
     text-decoration: none;
-    background-image: linear-gradient(to top, #195634, #38CA79);
+    background-image: linear-gradient(to top, var(--cor5), var(--cor2));
 }
 
 header h1 {
+    font-family: var(--fonte-destaque);
     padding-bottom: 50px;
     text-align: center;
     color: white;
@@ -51,7 +69,7 @@ header nav a {
 }
 
 header nav a:hover {
-    color: #195634;
+    color: var(--cor5);
 }
 
 main {
@@ -60,23 +78,24 @@ main {
     background-color: white;
 }
 
+
 main h1 {
-    font-family: idroid;
+    font-family: var(--fonte-android);
     padding-top: 10px;
-    color: #195634;
+    color: var(--cor5);
     text-align: left;
     padding-left: 10px;
 }
 
 main h2 {
-    font-family: idroid;
+    font-family: var(--fonte-android);
     padding-left: 10px;
-    background-color: #84e1ad;
+    background-color: var(--cor1);
     margin-left: 5px;
     margin-right: 5px;
-    color: #195634;
+    color: var(--cor5);
     text-align: left;
-    background-image: linear-gradient(to right, #84e1ad, white);
+    background-image: linear-gradient(to right, var(--cor1), var(--cor0));
 }
 
 main p {
@@ -91,13 +110,13 @@ main p {
 #extra {
     border-radius: 10px;
     margin: 20px;
-    background-color: #84e1ad;
+    background-color: var(--cor1);
 }
 
 #extra h3 {
     border-radius: 5px;
     color: white;
-    background-color: #19563480;
+    background-color: var(--cor4);
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 10px;
@@ -110,11 +129,27 @@ main p {
     margin-right: 5px;
 }
 
-#extra li {}
+#extra ul li abbr {
+
+    text-decoration: none;
+}
 
 footer p {
-    background-color: #195634;
+    background-color: var(--cor5);
     text-align: center;
     color: white;
     padding: 10px;
+}
+
+footer p a {
+    color: white;
+}
+
+a {
+    text-decoration: none;
+
+}
+
+a:hover {
+    color: var(--cor3);
 }
