--- a/modulo1/desafio/d12/style.css
+++ b/modulo1/desafio/d12/style.css
@@ -25,6 +25,12 @@
     margin: 0px;
 }
 
+html,
+body {
+    min-height: 100vh;
+    /* background-color: darkgray; */
+}
+
 header {
     min-width: 350px;
     min-height: 100px;
@@ -36,10 +42,13 @@ header {
 }
 
 header h1 {
+    /* deixa tudo em maiusculo */
+    /* text-transform: uppercase; */
+    font-variant: small-caps;
     font-size: 3em;
 }
 
-header h2 {
+header p {
     padding-top: 20px;
     padding-bottom: 20px;
 }
@@ -71,8 +80,13 @@ section.container {
     text-align: left;
     padding-left: 30px;
     /* background-color: tomato; */
-    padding-top: 48px;
-    padding-bottom: 48px;
+    /* padding-top: 48px; */
+    /* padding-bottom: 48px; */
+
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+
 
 }
 
@@ -82,24 +96,34 @@ section.joaninha {
     background-attachment: fixed;
 }
 
+.joaninha p{
+    width: 400px;
+    background-color: rgba(0, 0, 0, 0.300);
+    color: white;
+}
+
 section.livro {
     background-image: url(imagens/background002.jpg);
     background-size: cover;
     background-attachment: fixed;
 }
 
+.livro p{
+    width: 400px;
+    background-color: rgba(0, 0, 0, 0.300);
+    color: white;
+}
+
 section.container article {
-    font-size: 3em;
+    font-size: 2em;
     /* background-color: blue; */
-    border: 3px solid black;
+    /* border: 3px solid black; */
     justify-content: left;
 }
 
-.caixinha {
-    padding-top: 10px;
+article p {
     padding-left: 30px;
-    width: 30%;
-
+    padding-top: 10px;
     padding-bottom: 50px;
 }
 
