--- a/modulo1/desafio/d12/style.css
+++ b/modulo1/desafio/d12/style.css
@@ -1,23 +1,27 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Passion+One&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
 
-/* :root {
-     variaveis em css 
+
+:root {
+    /* variaveis em css 
     --cor0: #ebe5c5;
     --cor1: #84e1ad;
     --cor2: #3ddc84;
     --cor3: #2fa866;
     --cor4: #1a5c37;
-    --cor5: #063d1e;
+    --cor5: #063d1e; */
 
-    --fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
-    --fonte-destaque: "Bebas Neue", "cursive";
-    --fonte-android: "Android", "cursive";
-} */
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: "Passion One", cursive;
+    --fonte3: Sriracha, cursive;
+}
 
 :root {
-    fonte-padrao: Verdana, Geneva, Tahoma, sans-serif
+    font-family: var(--fonte1)
 }
 
 * {
@@ -42,6 +46,7 @@ header {
 }
 
 header h1 {
+    font-family: var(--fonte2);
     /* deixa tudo em maiusculo */
     /* text-transform: uppercase; */
     font-variant: small-caps;
@@ -77,6 +82,7 @@ main {
 } */
 
 section.container {
+    font-family: var(--fonte3);
     text-align: left;
     padding-left: 30px;
     /* background-color: tomato; */
@@ -96,8 +102,10 @@ section.joaninha {
     background-attachment: fixed;
 }
 
-.joaninha p{
-    width: 400px;
+.joaninha p {
+    /* width: 400px; */
+    /* asim ele fecha uma caixa que se ajuta ao conteudo */
+    display: inline-block;
     background-color: rgba(0, 0, 0, 0.300);
     color: white;
 }
@@ -108,8 +116,9 @@ section.livro {
     background-attachment: fixed;
 }
 
-.livro p{
-    width: 400px;
+.livro p {
+    /* width: 400px; */
+    display: inline-block;
     background-color: rgba(0, 0, 0, 0.300);
     color: white;
 }
