--- a/modulo1/desafio/social/style.css
+++ b/modulo1/desafio/social/style.css
@@ -33,5 +33,24 @@ section.telefone {
     background-image: url(imagens/frame-iphone.png);
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: green;
+    align-items: center;
+    display: flex;
+}
+
+.conteudo {
+    padding-left: 5px;
+    margin: auto;
+    width: 265px;
+    display: flex;
+    align-items: center;
+
+    background-color: tomato;
+    height: 467px;
+    padding-bottom: 10px;
+
+}
+
+section.iframe {
+    height: 100vh;
+    width: 100vw;
 }
