--- a/modulo1/desafio/social/style.css
+++ b/modulo1/desafio/social/style.css
@@ -54,3 +54,16 @@ section.iframe {
     height: 100vh;
     width: 100vw;
 }
+
+.redres-sociais img {
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    /* ser para a borda fazer parte da caixa */
+    box-sizing: border-box;
+}
+
+.redres-sociais img:hover {
+    border: 2px solid white;
+}
