--- a/modulo1/desafio/social/style.css
+++ b/modulo1/desafio/social/style.css
@@ -38,24 +38,19 @@ section.telefone {
 }
 
 .conteudo {
-    padding-left: 5px;
+    /* padding-left: 5px; */
     margin: auto;
     width: 265px;
     display: flex;
     align-items: center;
 
-    background-color: tomato;
-    height: 467px;
-    padding-bottom: 10px;
-
+    background-color: black;
+    height: 472px;
+    /* padding-bottom: 10px; */
 }
 
-section.iframe {
-    height: 100vh;
-    width: 100vw;
-}
 
-.redres-sociais img {
+.redes-sociais img {
     width: 50px;
     height: 50px;
     margin: 10px;
@@ -64,6 +59,6 @@ section.iframe {
     box-sizing: border-box;
 }
 
-.redres-sociais img:hover {
+.redes-sociais img:hover {
     border: 2px solid white;
 }
