--- a/modulo1/ex26/mq2/style/paisagem.css
+++ b/modulo1/ex26/mq2/style/paisagem.css
@@ -1,3 +1,9 @@
 @charset "UTF-8";
 
 /* deitado */
+
+
+body {
+    background-image: url(../../imagens/cev-landscape.jpg);
+    background-position: center bottom;
+}
