--- a/modulo1/ex26/mq2/style/style.css
+++ b/modulo1/ex26/mq2/style/style.css
@@ -1,3 +1,23 @@
 @charset "UTF-8";
 
 /* configuracoes gerais */
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+html,
+body {
+    width: 100vw;
+    height: 100vh;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: blue;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+h1 {
+    padding: 10px;
+    color: white;
+}
