--- a/modulo1/ex26/mq5/style.css
+++ b/modulo1/ex26/mq5/style.css
@@ -1,5 +1,16 @@
 @charset "UTF-8";
 
+
+/* 
+    typical devices breakpoints 
+    pequenas telas - até 600px
+    celular - 600px até 768px
+    tablet - 768px até 992px
+    desktop - 992px atte 1200px
+    tv - acima de  1200px
+    grandes telas:
+*/
+
 @media all {
     * {
         padding: 0px;
@@ -22,7 +33,7 @@
         cursor: pointer;
     }
 
-    menu{
+    menu {
         display: none;
     }
 
@@ -84,7 +95,35 @@
         text-align: justify;
         text-indent: 20px;
     }
+}
 
 
+/* 
+    typical devices breakpoints 
+    pequenas telas - até 600px
+    celular - 600px até 768px
+    tablet - 768px até 992px
+    desktop - 992px atte 1200px
+    tv - acima de  1200px
+    grandes telas:
+*/
+
+
+@media screen and (min-width: 768px) {
+    #burguer {
+        display: none;
+    }
+
+    menu {
+        display: block;
+    }
+
+    header menu ul li {
+        display: inline-block;
+    }
+
+    main {
+        width: 768px;
+    }
 
 }
