--- a/modulo1/desafio/d16/style.css
+++ b/modulo1/desafio/d16/style.css
@@ -26,14 +26,45 @@
     body {
         background: linear-gradient(to left, var(--c1), var(--c3));
         height: 100vh;
-        display: flex;
         align-items: center;
+        display: flex;
     }
 
     main {
+        /* tudo fora da div fica nao visivel */
+        overflow: hidden;
+        align-items: center;
         margin: auto;
         background-color: white;
         height: 100vh;
+        width: 100vw;
+    }
+
+    .foto {
+        background-image: url(imagens/pexels-eugene-golovesov-15191625.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+        height: 200px;
+
+    }
+
+
+    h1 {
+        text-align: center;
+    }
+
+    p {
+        display: flex;
+        justify-content: center;
+    }
+
+    p label {
+        padding-right: 10px;
+    }
+
+    .botao input {
+        margin: 8px;
     }
 
 }
@@ -43,8 +74,19 @@
 
     main {
         align-items: center;
-        height: 350px;
+        height: 400px;
         margin: auto;
-        width: 768px;
+        width: 80vw;
+
+        border-radius: 12px;
+    }
+
+}
+
+@media screen and (min-width: 992px) {
+    main {
+        width: 900px;
+        height: 600px;
+        border-radius: 12px;
     }
 }
