--- a/modulo1/desafio/d16/style.css
+++ b/modulo1/desafio/d16/style.css
@@ -51,10 +51,13 @@
 
 
     h1 {
+        font-size: 1.5em;
+        padding-top: 20px;
         text-align: center;
     }
 
     p {
+        font-size: 1.2;
         display: flex;
         justify-content: center;
     }
@@ -63,8 +66,20 @@
         padding-right: 10px;
     }
 
-    .botao input {
-        margin: 8px;
+    .formulario p {
+        padding: 10px;
+    }
+
+    .entrar {
+        padding-top: 8px;
+        display: block;
+        margin: auto;
+    }
+
+    .esqueci {
+        padding-top: 8px;
+        display: block;
+        text-align: center;
     }
 
 }
